This revision fixes two issues: [1] the default action icons for text inputs and password inputs from the Windows 8 Metro UI are now disabled, and [2] the text input wrapper <div> contents were vertically aligned to the top to give been inline performance.

--- a/stylesheets/delfini.all.css
+++ b/stylesheets/delfini.all.css
@@ -34,6 +34,14 @@ body {
 	font-family: Verdana, Geneva, sans-serif;
 }
 
+::-ms-clear {
+	display: none;
+}
+
+::-ms-reveal {
+	display: none;
+}
+
 /**
  * delfini.button
  * ----------------------------------
@@ -633,6 +641,7 @@ div.inputWrapper {
 	border-radius: 5px;
 	display: inline-table;
 	position: relative;
+	vertical-align: top;
 	width: 202px;
 }
 
