--- a/stylesheets/delfini.base.css
+++ b/stylesheets/delfini.base.css
@@ -19,3 +19,11 @@
 body {
 	font-family: Verdana, Geneva, sans-serif;
 }
+
+::-ms-clear {
+	display: none;
+}
+
+::-ms-reveal {
+	display: none;
+}
